--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -1,6 +1,8 @@
 <% layout('layouts/boilerplate') %>
 
 <h1>INDEX</h1>
+
+<a href="/posts/new">Create new post</a>
 <ul>
     <% for(let post of posts) {%>
         <li><a href="/posts/<%=post.id%>"><%=post.title%></a></li>
