--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -2,7 +2,7 @@
 
 <div class="row">
     <h1 class="text-center">New Post</h1>
-    <div class="col-8 offset-2">
+    <div class="col-xl-8 offset-xl-2">
 
 
         <form action="/posts" method="POST" class="needs-validation" novalidate>
