--- a/views/posts/edit.ejs
+++ b/views/posts/edit.ejs
@@ -2,7 +2,7 @@
 
 <div class="row">
     <h1 class="text-center">Edit Post</h1>
-    <div class="col-8 offset-2">
+    <div class="col-xl-8 offset-xl-2"></div>
         <form action="/posts/<%=post.id%>?_method=PUT" method="POST" class="needs-validation" novalidate>
             <div class="mb-3">
                 <label for="title" class="form-label">Title</label>
