--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -1,18 +1,19 @@
 <% layout('layouts/boilerplate') %>
 
-<div class="col-8 offset-2">
+<div class="col-md-8 offset-md-2">
     <div class="card mb-3">
         <div class="card-body">
           <h5 class="card-title"><%=post.title%></h5>
-          <h6 class="card-subtitle mb-2 text-muted">author placeholder</h6>
+          <h6 class="card-subtitle mb-2 text-muted"><%= post.author.username %></h6>
           <p class="card-text"><%=post.content%></p>
+          <% if(currentUser && post.author.equals(currentUser._id)) { %>
           <div class="card-body">
             <a href="/posts/<%=post.id%>/edit" class="card-link btn btn-primary">Edit Post</a>
             <form action="/posts/<%= post.id %>?_method=DELETE" class="d-inline" method="POST">
                 <button class="btn btn-danger">Delete</button>
             </form>
           </div>
-    
+          <% } %>
         </div>
       </div>
     
@@ -33,11 +34,13 @@
                     <%=post.comments[i].content%>
                 </div>
                 <div class="card-footer">
-                    placeholder author
+                    <%= post.comments[i].author.username %>
                 </div>
+                <% if(currentUser && post.comments[i].author.equals(currentUser._id)) {%>
                 <form action="/posts/<%= post.id %>/comments/<%= post.comments[i].id%>?_method=DELETE" class="d-inline" method="POST">
                     <button class="btn btn-danger">Delete</button>
                 </form>
+                <% } %>
             </div>
     
     
