--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,15 +1,17 @@
 <% layout('layouts/boilerplate') %>
 
-<h1>Login</h1>
+<h1 class="text-center">Login</h1>
+<div class="col-xl-8 offset-xl-2">
+    <form action="/users/login" method="POST" class="validated-form" novalidate>
+        <div class="mb-3">
+            <label class="form-label" for="username">Username</label>
+            <input class="form-control" type="text" id="username" name="username" required>
+        </div>
+        <div class="mb-3">
+            <label class="form-label" for="password">Password</label>
+            <input class="form-control" type="password" id="password" name="password" required>
+        </div>
+        <button class="btn btn-success">Login</button>
+    </form>
+</div>
 
-<form action="/users/login" method="POST" class="validated-form" novalidate>
-    <div class="mb-3">
-        <label class="form-label" for="username">Username</label>
-        <input class="form-control" type="text" id="username" name="username" required>
-    </div>
-    <div class="mb-3">
-        <label class="form-label" for="password">Password</label>
-        <input class="form-control" type="password" id="password" name="password" required>
-    </div>
-    <button class="btn btn-success">Register</button>
-</form>
